--- a/server.properties
+++ b/server.properties
@@ -1,2 +1,2 @@
-{"server":"admin-server-askalien.193b.starter-ca-central-1.openshiftapps.com",
+{"server":"server-admin-askalien-b.193b.starter-ca-central-1.openshiftapps.com",
  "server2":"admin-askalien-server.herokuapp.com"}
