--- a/server.properties
+++ b/server.properties
@@ -1,2 +1,3 @@
-{"server":"server-admin-askalien-b.193b.starter-ca-central-1.openshiftapps.com",
+{"server":"askalien-222012.appspot.com",
+"server1":"server-admin-askalien-b.193b.starter-ca-central-1.openshiftapps.com",
  "server2":"admin-askalien-server.herokuapp.com"}
