--- a/server.properties
+++ b/server.properties
@@ -1,3 +1,3 @@
 {"server2":"server-admin-askalien-b.193b.starter-ca-central-1.openshiftapps.com",
- "server":"askalien-admin.herokuapp.com"}
+ "server":"askalien-admin2.herokuapp.com"}
             
