adding https in property

--- a/server.properties
+++ b/server.properties
@@ -1,4 +1,2 @@
-{"server2":"server-admin-askalien-b.193b.starter-ca-central-1.openshiftapps.com",
- "server3":"askalien-admin2.herokuapp.com",
- "server" :"askalien-admin.fly.dev"}
+{ "server" :"https://askalien-admin.fly.dev"}
             
